packages/html-macro-test/src/tests/ui/should_be_self_closing_tag.stderr
error: br is a self closing tag. Try "<br>" or "<br />"
  --> $DIR/should_be_self_closing_tag.rs:10:15
   |
10 |         <br></br>
   |               ^^
